made userlist scrollable to stop overflow from hiding

--- a/src/App.css
+++ b/src/App.css
@@ -417,6 +417,10 @@ form {
 
 .userListContainer {
   margin-top : 4vh;
+  height:55vh;
+  width: 55vw;
+  overflow-y : scroll;
+
 }
 
 .userListItem {
